plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'mealplanner'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

javafx {
    version = "25.0.0"
    modules = ['javafx.controls', 'javafx.web']
}

application {
    mainClass = 'mealplanner.jfx.HelloSvelteApp'
    applicationDefaultJvmArgs = [
        "--enable-native-access=javafx.graphics,javafx.web"
    ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}
